# baby_care_ai

./: .env_example  .gitignore  README.md  pyproject.toml  requirements.txt  setup_config.py
baby_care_ai/: automation_logic.py
baby_care_ai/blink/: collect.py  dedup.py
baby_care_ai/gooogle_drive/: drive_utils.py
baby_care_ai/models/: readme.md  utils.py
baby_care_ai/rpi/: collect.py  readme.md
scripts/: automation.py
